--- a/requirements.txt
+++ b/requirements.txt
@@ -128,6 +128,7 @@ stack-data==0.6.3
 starlette==0.47.1
 streamlit==1.45.1
 tenacity==9.1.2
+gunicorn==23.0.0
 terminado==0.18.1
 tinycss2==1.4.0
 toml==0.10.2
